--- a/audio_example.ipynb
+++ b/audio_example.ipynb
@@ -22,35 +22,43 @@
     "import matplotlib.pyplot as plt\n"
    ],
    "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'never'"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:23:14.057097900Z",
+     "start_time": "2024-07-31T14:23:05.490176900Z"
     }
-   ],
-   "source": [
-    "labels_df = pd.read_excel('./data/NEW_IRB300012145_Patient_ID_deidentified.xlsx')\n",
-    "Smokeing_status = labels_df.iloc[:, 4].to_list()\n",
-    "\n",
-    "Smokeing_status[149]"
-   ],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'never'"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels_df = pd.read_excel('./data/data/NEW_IRB300012145_Patient_ID_deidentified.xlsx')\n",
+    "Smokeing_status = labels_df.iloc[:, 4].to_list()\n",
+    "\n",
+    "Smokeing_status[149]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:24:59.554726700Z",
+     "start_time": "2024-07-31T14:24:58.868666700Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import torchaudio.transforms as T\n",
@@ -102,18 +110,22 @@
     "        return self.scaler.transform(features)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:25:03.896744700Z",
+     "start_time": "2024-07-31T14:25:01.143009300Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "0"
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,12 +140,16 @@
     "label_to_int['current']"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:32:19.101155400Z",
+     "start_time": "2024-07-31T14:32:19.089577700Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "class SoundDataset(Dataset):\n",
@@ -193,7 +209,7 @@
     "        return waveform, label\n",
     "\n",
     "transform = AmplitudeNormalization()\n",
-    "data_dir = './data/Patients'\n",
+    "data_dir = './data/data/Patients'\n",
     "sound_dataset = SoundDataset(data_dir, Smokeing_status, transform=transform)\n",
     "\n",
     "train_dataset, test_dataset = random_split(sound_dataset, [180, 20])\n",
@@ -204,66 +220,76 @@
     "dataloader = DataLoader(sound_dataset, batch_size=4, shuffle=True)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:32:20.334561400Z",
+     "start_time": "2024-07-31T14:32:20.325243100Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 1, 2, 1])\n",
+      "tensor([2, 2, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
       "tensor([2, 2, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 0, 2])\n",
+      "tensor([2, 2, 2, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([1, 2, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
       "tensor([1, 2, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 1, 1])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 1, 1, 1])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([0, 1, 1, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 1, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 0, 1, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 1, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 1, 2, 1])\n",
+      "tensor([2, 2, 2, 1])\n",
       "torch.Size([4, 1280, 1000])\n",
       "tensor([2, 1, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 2, 2, 1])\n",
+      "tensor([2, 2, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 1, 1])\n",
+      "tensor([1, 1, 1, 1])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 1, 1, 2])\n",
+      "tensor([1, 1, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 1, 1])\n",
+      "tensor([2, 2, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 1])\n",
+      "tensor([2, 1, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 1, 2, 1])\n",
+      "tensor([2, 0, 2, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([1, 0, 2, 0])\n",
       "torch.Size([4, 1280, 1000])\n",
       "tensor([2, 2, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 1, 2, 0])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 1, 1, 1])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 2, 1, 1])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([1, 1, 1, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 2, 1, 1])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 2, 0, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
       "tensor([2, 2, 2, 1])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 1])\n"
+      "tensor([1, 2, 1, 0])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 2, 1, 1])\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/mengchenfan/miniconda3/lib/python3.10/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=190\n",
+      "C:\\Users\\fanm\\myFile\\env\\Lib\\site-packages\\librosa\\core\\spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=190\n",
       "  warnings.warn(\n"
      ]
     },
@@ -272,53 +298,47 @@
      "output_type": "stream",
      "text": [
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 1])\n",
+      "tensor([2, 1, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 1])\n",
+      "tensor([2, 1, 2, 0])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 0, 0])\n",
+      "tensor([2, 2, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 0, 2, 0])\n",
+      "tensor([1, 2, 0, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 2, 1, 0])\n",
+      "tensor([1, 2, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([0, 2, 0, 1])\n",
+      "tensor([2, 1, 2, 1])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 2, 2, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([1, 2, 2, 1])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 1, 2, 1])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 1, 1, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 2, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
       "tensor([2, 2, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
       "tensor([2, 2, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 2, 2, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 2, 1, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 1, 2, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
       "tensor([2, 0, 1, 1])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 1, 2, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 2, 2, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 2, 2, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 1, 2, 2])\n",
+      "tensor([1, 0, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
       "tensor([2, 2, 2, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 1, 1, 2])\n",
-      "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 1])\n",
-      "torch.Size([4, 1280, 1000])\n",
       "tensor([1, 2, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 1, 2, 2])\n"
+      "tensor([1, 2, 2, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 2, 2, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([0, 2, 2, 2])\n",
+      "torch.Size([4, 1280, 1000])\n",
+      "tensor([2, 2, 2, 2])\n"
      ]
     }
    ],
@@ -329,27 +349,31 @@
     "    print(labels)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:32:41.366537Z",
+     "start_time": "2024-07-31T14:32:26.973557900Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 2, 1, 2])\n",
+      "tensor([2, 1, 2, 1])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 1, 1, 2])\n",
+      "tensor([1, 2, 2, 1])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([2, 2, 2, 2])\n",
+      "tensor([2, 2, 1, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([0, 2, 1, 2])\n",
+      "tensor([1, 1, 0, 2])\n",
       "torch.Size([4, 1280, 1000])\n",
-      "tensor([1, 2, 1, 2])\n"
+      "tensor([2, 1, 1, 1])\n"
      ]
     }
    ],
@@ -360,32 +384,38 @@
     "    print(labels)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:32:46.486415500Z",
+     "start_time": "2024-07-31T14:32:44.989845200Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "class AudioClassifier(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(AudioClassifier, self).__init__()\n",
-    "        self.conv1 = nn.Conv1d(10, 16, kernel_size=3, stride=1, padding=1)\n",
+    "        # Adjusted the number of input channels to 1280\n",
+    "        self.conv1 = nn.Conv1d(1280, 16, kernel_size=3, stride=1, padding=1)\n",
     "        self.pool = nn.MaxPool1d(2, 2)\n",
     "        self.conv2 = nn.Conv1d(16, 32, kernel_size=3, stride=1, padding=1)\n",
     "\n",
     "        # Calculate the size of the output from the last conv layer to pass to the first linear layer\n",
-    "        self.final_conv_length = self._get_conv1d_output_size(500000, 3, 1, 1, 2)  # output size after first conv and pool\n",
-    "        self.final_conv_length = self._get_conv1d_output_size(self.final_conv_length, 3, 1, 1, 2)  # output size after second conv and pool\n",
+    "        initial_length = 1000  # Initial length of the signal\n",
+    "        final_conv_length = self._get_conv1d_output_size(initial_length, 3, 1, 1, 2)  # After first conv and pool\n",
+    "        final_conv_length = self._get_conv1d_output_size(final_conv_length, 3, 1, 1, 2)  # After second conv and pool\n",
     "\n",
-    "        self.fc1 = nn.Linear(32 * self.final_conv_length, 128)  # Linear layer for feature reduction\n",
-    "        self.fc2 = nn.Linear(128, 3)  # Adjusting this for 3 classes\n",
+    "        self.fc1 = nn.Linear(32 * final_conv_length, 128)  # Linear layer for feature reduction\n",
+    "        self.fc2 = nn.Linear(128, 3)  # Output layer for 3 classes\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.pool(F.relu(self.conv1(x)))\n",
     "        x = self.pool(F.relu(self.conv2(x)))\n",
-    "        x = torch.flatten(x, 1)\n",
+    "        x = torch.flatten(x, 1)  # Flatten from the second dimension onward\n",
     "        x = F.relu(self.fc1(x))\n",
     "        x = self.fc2(x)\n",
     "        return x\n",
@@ -413,12 +443,16 @@
     "        return x"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:35:42.434587900Z",
+     "start_time": "2024-07-31T14:35:42.429998100Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "import torch\n",
@@ -463,18 +497,22 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:35:43.742251500Z",
+     "start_time": "2024-07-31T14:35:43.734089800Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/mengchenfan/miniconda3/lib/python3.10/site-packages/librosa/core/spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=190\n",
+      "C:\\Users\\fanm\\myFile\\env\\Lib\\site-packages\\librosa\\core\\spectrum.py:266: UserWarning: n_fft=2048 is too large for input signal of length=190\n",
       "  warnings.warn(\n"
      ]
     },
@@ -482,14 +520,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 3.1616, Accuracy: 56.11%\n",
-      "Accuracy of the model on the test set: 55.00%\n"
+      "Epoch 1, Loss: 0.8736, Accuracy: 61.67%\n",
+      "Accuracy of the model on the test set: 45.00%\n",
+      "Epoch 2, Loss: 0.7857, Accuracy: 65.56%\n",
+      "Accuracy of the model on the test set: 50.00%\n",
+      "Epoch 3, Loss: 0.7122, Accuracy: 68.33%\n",
+      "Accuracy of the model on the test set: 55.00%\n",
+      "Epoch 4, Loss: 0.6280, Accuracy: 70.56%\n",
+      "Accuracy of the model on the test set: 60.00%\n",
+      "Epoch 5, Loss: 0.5842, Accuracy: 72.78%\n",
+      "Accuracy of the model on the test set: 60.00%\n",
+      "Epoch 6, Loss: 0.5281, Accuracy: 76.67%\n",
+      "Accuracy of the model on the test set: 55.00%\n",
+      "Epoch 7, Loss: 0.4024, Accuracy: 82.78%\n",
+      "Accuracy of the model on the test set: 65.00%\n",
+      "Epoch 8, Loss: 0.4154, Accuracy: 82.78%\n",
+      "Accuracy of the model on the test set: 60.00%\n",
+      "Epoch 9, Loss: 0.3252, Accuracy: 85.00%\n",
+      "Accuracy of the model on the test set: 60.00%\n",
+      "Epoch 10, Loss: 0.3498, Accuracy: 89.44%\n",
+      "Accuracy of the model on the test set: 50.00%\n"
      ]
     }
    ],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = MLPClassifier().to(device)\n",
+    "model = AudioClassifier().to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
@@ -528,6 +584,10 @@
     "collapsed": false,
     "pycharm": {
      "is_executing": true
+    },
+    "ExecuteTime": {
+     "end_time": "2024-07-31T14:38:15.048564300Z",
+     "start_time": "2024-07-31T14:35:46.996449300Z"
     }
    }
   },
