--- a/audio_example_voice.ipynb
+++ b/audio_example_voice.ipynb
@@ -2,8 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
    "source": [
     "\n",
     "import torchaudio\n",
@@ -24,26 +22,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T14:23:14.057097900Z",
-     "start_time": "2024-07-31T14:23:05.490176900Z"
+     "end_time": "2024-10-07T21:15:18.382441Z",
+     "start_time": "2024-10-07T21:15:16.421030Z"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "'never'"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "labels_df = pd.read_excel('./data/data/NEW_IRB300012145_Patient_ID_deidentified.xlsx')\n",
+    "labels_df = pd.read_excel('./data/NEW_IRB300012145_Patient_ID_deidentified.xlsx')\n",
     "Smokeing_status = labels_df.iloc[:, 4].to_list()\n",
     "\n",
     "Smokeing_status[149]"
@@ -51,15 +40,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T14:24:59.554726700Z",
-     "start_time": "2024-07-31T14:24:58.868666700Z"
+     "end_time": "2024-10-07T21:15:26.672069Z",
+     "start_time": "2024-10-07T21:15:26.419473Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'never'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
    "source": [
     "import torchaudio.transforms as T\n",
     "\n",
@@ -112,10 +112,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T14:25:03.896744700Z",
-     "start_time": "2024-07-31T14:25:01.143009300Z"
+     "end_time": "2024-10-07T21:15:35.118130Z",
+     "start_time": "2024-10-07T21:15:34.500412Z"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -162,8 +164,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [],
    "source": [
     "label_to_int = {\n",
     "    'current': 0,\n",
@@ -172,13 +172,17 @@
     "}"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-07T21:15:37.464014Z",
+     "start_time": "2024-10-07T21:15:37.448991Z"
+    }
+   },
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "outputs": [],
    "source": [
     "class SoundDataset(Dataset):\n",
     "    def __init__(self, data_dir, labels_df, transform=None, max_len=10000):\n",
@@ -227,7 +231,7 @@
     "        return waveform, label\n",
     "\n",
     "transform = AmplitudeNormalization()\n",
-    "data_dir = './data/data/Patients'\n",
+    "data_dir = './data/Patients'\n",
     "sound_dataset = SoundDataset(data_dir, Smokeing_status, transform=transform)\n",
     "\n",
     "train_dataset, test_dataset = random_split(sound_dataset, [180, 20])\n",
@@ -240,112 +244,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T14:32:20.334561400Z",
-     "start_time": "2024-07-31T14:32:20.325243100Z"
+     "end_time": "2024-10-07T21:15:51.375610Z",
+     "start_time": "2024-10-07T21:15:51.361571Z"
     }
-   }
+   },
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 0, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 0, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 0, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 0, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 0, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 0, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 0, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 1, 0])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 0, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 0, 1, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 0, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 1])\n",
-      "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 1])\n"
-     ]
-    }
-   ],
    "source": [
     "for batch in traindataloader:\n",
     "    waveforms, labels = batch\n",
@@ -353,30 +260,114 @@
     "    print(labels)"
    ],
    "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-07T21:16:18.278232Z",
+     "start_time": "2024-10-07T21:15:54.382224Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 1, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
       "tensor([1, 0, 1, 1])\n",
       "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 0])\n",
+      "tensor([1, 1, 0, 0])\n",
       "torch.Size([4, 128, 10000])\n",
-      "tensor([0, 1, 0, 1])\n",
+      "tensor([1, 1, 1, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 1, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 0, 0])\n",
       "torch.Size([4, 128, 10000])\n",
       "tensor([1, 1, 1, 1])\n",
       "torch.Size([4, 128, 10000])\n",
-      "tensor([1, 1, 0, 1])\n"
+      "tensor([1, 1, 1, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 0, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 1, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 1, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 0, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 1, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 0, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 1, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 0, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 0, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 0, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 0, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 0])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 0, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 0, 1, 0])\n"
      ]
     }
    ],
+   "execution_count": 9
+  },
+  {
+   "cell_type": "code",
    "source": [
     "for batch in testdataloader:\n",
     "    waveforms, labels = batch\n",
@@ -386,10 +377,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-31T14:32:46.486415500Z",
-     "start_time": "2024-07-31T14:32:44.989845200Z"
+     "end_time": "2024-10-07T21:16:23.187838Z",
+     "start_time": "2024-10-07T21:16:20.471705Z"
     }
-   }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 0, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([0, 1, 1, 1])\n",
+      "torch.Size([4, 128, 10000])\n",
+      "tensor([1, 1, 0, 1])\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
